[package]
name = "bins"
version = "0.1.0-nightly"
authors = ["Kyle Clemens <jkc.clemens@gmail.com>"]
build = "build.rs"

[features]
default = ["clipboard_support"]
clipboard_support = ["clipboard"]
# Enable this feature to add the --pasta flag to bins, which replaces input with copypasta
copypasta = []

[dependencies]
toml = "0.1.30"
clap = "2.5.2"
hyper = "0.9"
rand = "0.3.14"
rustc-serialize = "0.3.19"
error-chain = "0.1.12"
linked-hash-map = "0.0.10"
lazy_static = "0.2.1"
url = { git = "https://github.com/servo/rust-url" }
clipboard = { git = "https://github.com/aweinstock314/rust-clipboard", optional = true }

[build-dependencies]
git2 = "0.4.3"
rustc_version = "0.1.7"

[profile.release]
lto = true
